--- a/p3/practicasDjango/e_rapida1/mainapp/templates/mainapp/about.html
+++ b/p3/practicasDjango/e_rapida1/mainapp/templates/mainapp/about.html
@@ -1,9 +1,10 @@
 {% extends "layouts/layouts.html" %}
-{% block tittle %}
-    {{ title }}
-{% endblock tittle %}
+
+{% block title %}
+    {{title}}
+{% endblock title %}
 
 {% block content %}
-    <h1> {{ title }}</h1>
-    <h2> {{ content }}</h2>
+    <h1>{{title}}</h1>
+    <h2>{{content}}</h2>
 {% endblock content %}
