--- a/p3/practicasDjango/e_rapida1/mainapp/templates/mainapp/vision.html
+++ b/p3/practicasDjango/e_rapida1/mainapp/templates/mainapp/vision.html
@@ -1,9 +1,16 @@
 {% extends "layouts/layouts.html" %}
-{% block tittle %}
-    {{ title }}
-{% endblock tittle %}
+
+{% block title %}
+    {{title}}
+{% endblock title %}
+
 
 {% block content %}
-    <h1> {{ title }}</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolore fugiat, sit unde provident dolorum! Perferendis dolorum corporis reiciendis autem beatae, unde cum, dignissimos aut rerum obcaecati, expedita provident placeat.</p>
+    <h1>{{title}}</h1>
+    <h2>{{content}}</h2>
+    <p>
+        Ser una universidad reconocida a nivel nacional e internacional por su calidad educativa, innovación, vinculación y compromiso social, que impulsa la formación integral de sus estudiantes y contribuye al desarrollo tecnológico y económico de México.
+
+        Estos principios orientan las actividades de la UTD, enfocándose en la preparación de profesionales capacitados para enfrentar los retos del mundo laboral.
+    </p>
 {% endblock content %}
