--- a/p3/practicasDjango/e_rapida1/mainapp/templates/layouts/layouts.html
+++ b/p3/practicasDjango/e_rapida1/mainapp/templates/layouts/layouts.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        {% block title %}{% endblock title %}
+        {% block title %}
+        {% comment %}
+            aqui va el contenido del bloque
+        {% endcomment %}
+        {% endblock title %}
     </title>
 </head>
 <body>
+    <h1>Bienvenido a mi appp web de Django</h1>
+    <h2>Desarrollo web con python y Django</h2>
     <nav>
         <ul>
-            <li><a href="{% url "index" %}" >Inicio</a></li>
+            <li><a href="{% url "inicio" %}">Inicio</a></li>
+            <li><a href="{% url "mision" %}">Misión</a></li>
+            <li><a href="{% url "vision" %}">Visión</a></li>
             <li><a href="{% url "acercade" %}">Acerca de</a></li>
-            <li><a href="{% url "mision" %}">Mision</a></li>
-            <li><a href="{% url "vision" %}">Vision</a></li>
         </ul>
     </nav>
+    {% block content %}
+    {% comment %} 
+        Aqui va el contenido de mi bloque content 
+    {% endcomment %}
+    {% endblock content %}
 
-    {% block content %}{% endblock content %}
+
 </body>
 </html>
